chore: Added a comprehensive test against my S7-1500 devices and started fine-tuning the code to work with more and more of the test-cases.